--- a/_posts/2017-05-13-why-c.html
+++ b/_posts/2017-05-13-why-c.html
@@ -10,11 +10,8 @@ link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/1_why_c.pdf
     <p>Wanted to learn C? Don't worry, you are at the right place! If you are wondering if this series on C is meant for you, then here's the answer. I wanted to write these tutorials in such a way that beginners will easily be able to grasp what's in here and at the same time I did not want to compromise on the content. And that is one helluva task to achieve! So I might dare say that beginners as well as those people who are somewhat familiar with C will find this series helpful. Just stick around, and find this out for yourself!</p>
 </div>
 
-<div class="col-lg-8 col-xs-12">
+<div class="col-xs-12">
     <p><strong>Why do we need to bother ourselves with this programming language called C?</strong> This is the first question that should crop up in your minds before we actually get into the subject. Let me answer that for you. C was actually designed in the seventies with an objective of re-building the <strong>Unix operating system</strong>. It has since become one of the most widely used programming languages of all time. As time went by, many high-level languages have since been developed. But C still stands tall amidst those newer programming languages. I only came to know about the power of C after I began to learn it.</p>
-</div>
-<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-    <img src="https://cdn.meme.am/cache/instances/folder552/54717552.jpg" class="img-responsive meme-img1" alt="Did someone say the C-word?!" title="Did someone say the C-word?!" />
 </div>
 
 <div class="col-xs-12">
