Improved mobile responsiveness

--- a/_posts/2017-05-13-why-c.html
+++ b/_posts/2017-05-13-why-c.html
@@ -2,7 +2,7 @@
 layout: posts
 title: Why C
 meta: Understanding the need to learn C
-description: We begin our journey with my very first tutorial which is just about why do we need to learn C. With so many programming languages around, we explore what is so special about C that it draws so much attention even after so many years of its birth and is it still worth learning C.
+description: With so many programming languages around, find out what is so special about C that it's still around after so many years of its advent and see if it's still worth learning C.
 link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/1_why_c.pdf
 ---
 
@@ -19,7 +19,7 @@ link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/1_why_c.pdf
 </div>
 
 <div class="col-xs-12">
-    <ol start="0" class="reason-list">
+    <ol start="0" style="padding: 15px;">
         <li>The very reason most of you are possibly reading this is because C is in your college curriculum, you need to learn it just to pass and you are dreaded of it. Fair enough! Well, though that may not be a proper reason (That's why it's numbered as the zeroth reason) but I promise you that if that's the case with you, in coming tutorials you'll see that C is really a fun language to learn.</li>
 
         <li>What I think is important to learn as a programmer is how your program is being implemented "<strong>behind-the-scenes</strong>". With C, you can learn that easily. For me this was the reason for learning C (I usually code in Python). The language is so basic that you'd be easily able to understand what is happening behind the scenes (or so to say!). So if you want to migrate to some so-called advanced languages later, it is better to get some insight into the very basics of implementation of C and then proceed.</li>
