Added the fourth post

--- a/_posts/2017-05-27-more-c.html
+++ b/_posts/2017-05-27-more-c.html
@@ -36,7 +36,7 @@ int main() {
 <div class="col-xs-12">
     <h3 class="text-left">The C character set</h3>
     <p>A character is obviously any alphabet, digit or special symbol used to represent any information. C allows the following set of characters.</p>
-    <table class="character-set">
+    <table class="full-width-xs">
         <tr>
             <td class="character-type">Alphabets</td>
             <td class="characters">A, B, C, ..., X, Y, Z<br />a, b, c, ..., x, y, z</td>
@@ -87,7 +87,7 @@ int main() {
     <p>The smallest unit of a C program is called a token or a lexical unit (so, we are really breaking down the program, huh!). Tokens in C can be of 6 types:</p>
     <ol>
         <li><strong>Keywords:</strong> C keywords are the words that convey a special meaning to the C compiler, that is, the compiler already knows what these words mean. As such, these words can’t be used to name any variables. There are 32 keywords in C which are listed as follows.
-            <table class="keywords">
+            <table class="keywords full-width-xs">
                 <tr>
                     <td>auto</td>
                     <td>break</td>
