Added facebook comments

--- a/_posts/2017-05-13-why-c.html
+++ b/_posts/2017-05-13-why-c.html
@@ -4,6 +4,7 @@ title: Why C
 meta: Understanding the need to learn C
 description: With so many programming languages around, find out what is so special about C that it's still around after so many years of its advent and see if it's still worth learning C.
 link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/1_why_c.pdf
+comments: true
 ---
 
 <div class="col-xs-12">
