--- a/_posts/2017-05-27-more-c.html
+++ b/_posts/2017-05-27-more-c.html
@@ -4,6 +4,7 @@ title: More C
 meta: A look into some theoretical concepts
 description: With a lot of insight into the theoretical aspects of C, this tutorial explains many key topics including variables, data types and tokens.
 link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/3_more_c.pdf
+comments: true
 ---
 
 <div class="col-xs-12">
