--- a/_posts/2017-06-03-1s-and-0s.html
+++ b/_posts/2017-06-03-1s-and-0s.html
@@ -4,6 +4,7 @@ serial: 4
 title: 1’s and 0’s
 meta: The number theory of computers
 description: With this one, dive into number systems and see how integers are stored in computer memory. Know the binary world of computers.
+comments: true
 ---
 
 <div class="col-xs-12">
