Added the fifth post

--- a/_posts/2017-05-13-why-c.html
+++ b/_posts/2017-05-13-why-c.html
@@ -1,5 +1,6 @@
 ---
 layout: posts
+serial: 1
 title: Why C
 meta: Understanding the need to learn C
 description: With so many programming languages around, find out what is so special about C that it's still around after so many years of its advent and see if it's still worth learning C.
