--- a/_posts/2017-05-20-hello-c.html
+++ b/_posts/2017-05-20-hello-c.html
@@ -1,5 +1,6 @@
 ---
 layout: posts
+serial: 2
 title: Hello.c
 meta: Writing and compiling your first C program
 description: From why, move on to how! From the compilation process to the main() function to the C syntax rules, this tutorial covers it all and much more.
