--- a/_posts/2017-05-27-more-c.html
+++ b/_posts/2017-05-27-more-c.html
@@ -1,5 +1,6 @@
 ---
 layout: posts
+serial: 3
 title: More C
 meta: A look into some theoretical concepts
 description: With a lot of insight into the theoretical aspects of C, this tutorial explains many key topics including variables, data types and tokens.
@@ -87,7 +88,7 @@ int main() {
     <h3 class="text-left">Tokens or Lexical Units</h3>
     <p>The smallest unit of a C program is called a token or a lexical unit (so, we are really breaking down the program, huh!). Tokens in C can be of 6 types:</p>
     <ol>
-        <li><strong>Keywords:</strong> C keywords are the words that convey a special meaning to the C compiler, that is, the compiler already knows what these words mean. As such, these words can’t be used to name any variables. There are 32 keywords in C which are listed as follows.
+        <li><strong>Keywords:</strong> C keywords are the words that convey a special meaning to the C compiler, that is, the compiler already knows what these words mean. As such, these words can’t be used to name any variables. There are 32 keywords in C, not all of which you need to remember, but just have a look at the following list to comprehend what all is in there.
             <table class="keywords full-width-xs">
                 <tr>
                     <td>auto</td>
