Added the archive page

--- a/_posts/c-tutorial-series/2017-05-20-hello-c.html
+++ b/_posts/c-tutorial-series/2017-05-20-hello-c.html
@@ -6,6 +6,7 @@ meta: Writing and compiling your first C program
 description: From why, move on to how! From the compilation process to the main() function to the C syntax rules, this tutorial covers it all and much more.
 link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/2_hello_c.pdf
 comments: true
+category: c-tutorial-series
 ---
 
 <div class="col-xs-12">
