--- a/_posts/c-tutorial-series/2017-05-27-more-c.html
+++ b/_posts/c-tutorial-series/2017-05-27-more-c.html
@@ -6,6 +6,7 @@ meta: A look into some theoretical concepts
 description: With a lot of insight into the theoretical aspects of C, this tutorial explains many key topics including variables, data types and tokens.
 link: https://github.com/ankan17/learncwithme/raw/gh-pages/pdfs/3_more_c.pdf
 comments: true
+category: c-tutorial-series
 ---
 
 <div class="col-xs-12">
