--- a/_posts/c-tutorial-series/2017-06-03-1s-and-0s.html
+++ b/_posts/c-tutorial-series/2017-06-03-1s-and-0s.html
@@ -5,6 +5,7 @@ title: 1’s and 0’s
 meta: The number theory of computers
 description: With this one, dive into number systems and see how integers are stored in computer memory. Know the binary world of computers.
 comments: true
+category: c-tutorial-series
 ---
 
 <div class="col-xs-12">
