--- a/_posts/c-tutorial-series/2017-06-10-numbers-again.html
+++ b/_posts/c-tutorial-series/2017-06-10-numbers-again.html
@@ -5,6 +5,7 @@ title: Numbers Again!
 meta: Octal and Hexadecimal Integers
 description: We continue our journey with number systems and with the introduction of octal and hexa-decimal integers and modifiers, we delve more into more numbers.
 comments: true
+category: c-tutorial-series
 ---
 
 <div class="col-xs-12">
