Added the quick nav in posts and comments in practice section

--- a/_posts/practice/crazy-with-c/2014-01-01-crazy-with-c.html
+++ b/_posts/practice/crazy-with-c/2014-01-01-crazy-with-c.html
@@ -3,6 +3,7 @@ layout: crazy-with-c
 category: practice
 sub-category: crazy-with-c
 serial: 1
+comments: true
 ---
 
 <!-- *********************** Question 1 *********************** -->
