Complete overhaul to version 2.0 using Poole theme

--- a/practice.html
+++ b/practice.html
@@ -2,23 +2,26 @@
 layout: default
 ---
 
-<div class="row" id="practice">
+<div class="container page-container practice">
     <h1 class="text-center">Practice</h1>
-    <p class="text-center lead"><span class="hidden-xs">Practice brings perfection.</span> Hone your C skills with some challenging questions.</p>
-    <div class="col-xs-12 practice">
-        <h3>Crazy With C - <span class="lead">Try solving some challenging output questions</span></h3>
-        <ol>{% for post in site.categories.practice reversed %}
-                {% if post.sub-category == "crazy-with-c" %}
-                    <li><a href="{{ site.baseurl }}{{ post.url }}"><span class="title">{{ post.title }} - {{ post.serial }}</span></a></li>
-                {% endif %}
-        {% endfor %}</ol>
+    <p class="text-center lead">Hone your C skills with some challenging questions.</p>
+    <div class="col-12">
+        <h2>Crazy With C - <span class="lead">Try solving some challenging output questions</span></h2>
+        <ol>
+        {% for collection in site.crazy_with_c %}
+            <li>
+                <a href="{{ site.baseurl }}{{ collection.url }}"><span class="title">{{ collection.title }} - {{ collection.serial }}</span></a></li>
+        {% endfor %}
+        </ol>
     </div>
-    <div class="col-xs-12 practice">
-        <h3>Code Like Pro! - <span class="lead">Get your hands dirty with some coding problems</span></h3>
-        <ol>{% for post in site.categories.practice reversed %}
-                {% if post.sub-category == "code-like-pro" %}
-                    <li><a href="{{ site.baseurl }}{{ post.url }}"><span class="title">{{ post.title }}</span></a></li>
-                {% endif %}
-        {% endfor %}</ol>
+    <div class="col-12">
+        <h2>Code Like Pro! - <span class="lead">Get your hands dirty with some coding problems</span></h2>
+        <ol>
+        {% for collection in site.code_like_pro %}
+            <li>
+                <a href="{{ site.baseurl }}{{ collection.url }}"><span class="title">{{ collection.title }}</span></a>
+            </li>
+        {% endfor %}
+        </ol>
     </div>
 </div>
