--- a/archive.html
+++ b/archive.html
@@ -2,14 +2,20 @@
 layout: default
 ---
 
-<div class="row" id="archive">
+<div class="container page-container archive">
     <h1 class="text-center">Archive</h1>
-    <p class="text-center lead hidden-xs">The place where you'll find all my posts</p>
-    <p class="text-center lead hidden-lg hidden-md hidden-sm">Find all my posts here</p>
-    <div class="col-xs-12" id="c-tutorial-series">
-        <h3>C Tutorial Series</h3>
-        <ul>{% for post in site.categories.c-tutorial-series reversed %}
-            <li><a href="{{ site.baseurl }}{{ post.url }}"><span class="title">{{ post.serial }}. {{ post.title }}</span><span class="meta hidden-xs"> - {{ post.meta }}</a> ( <span class="date">{{ post.date | date: "%B %d, %Y" }}</span> )</li>
-        {% endfor %}</ul>
+    <p class="text-center lead">The place where you'll find all my posts</p>
+    <div class="col" class="c-tutorial-series">
+        <h2>C Tutorial Series</h2>
+        <ul>
+        {% for post in site.categories.c_tutorial_series reversed %}
+            <li>
+                <a href="{{ site.baseurl }}{{ post.url }}">
+                    <span class="title">{{ post.serial }}. {{ post.title }}</span>
+                    <span class="meta"> - {{ post.meta }}</span>
+                </a>
+            </li>
+        {% endfor %}
+        </ul>
     </div>
 </div>
